Users/serahp/Desktop/250221/ratings-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ratings-api
spec:
  selector:
    app: ratings-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
